# dockerfile_version_bumper

./: .dockerignore  .gitignore  CLI_HELP.txt  Cargo.toml  README.md  ci-conf.json  deny.toml  example.Dockerfile  upgrade_docker_base.sh
.github/workflows/: bump-dependencies.yml  check-dependencies.Dockerfile  check-dependencies.yml  release-binaries.yml  release.yml  test-lint.yml
ci/: check-dependencies.Dockerfile  release.Dockerfile  test-lint.Dockerfile
src/: args.rs  lib.rs  main.rs
src/dvb/: convert.rs  data.rs  mod.rs  read.rs  uptag.rs  write.rs
