[package]
name = "dockerfile_version_bumper"
version = "0.1.0"
description = "Simple tool for scanning `Dockerfile`s and switching the image tags that appear in `FROM` to their latest version."
edition = "2021"
publish = true
license = "Apache-2.0"

[[bin]]
name = "dockerfile_version_bumper"
path = "src/main.rs"

[lib]
name = "dockerfile_version_bumper"
path = "src/lib.rs"

[features]
jemalloc = ["jemallocator"]

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
clap = { version = "3.2.22", default-features = true, features = ["std", "derive", "unicode"] }
regex = "1.6.0"
lazy_static = "1.4.0"
tokio = { version = "1.21.2", features = ["full"] }
reqwest = "0.11.12"
futures = "0.3.24"
derive-getters = "0.2.0"
derive-new = "0.5.9"
itertools = "0.10.5"
indexmap = "1.9.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }

[profile.release]
lto = "thin"
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

