[package]
name = "dockerfile_version_bumper"
version = "0.1.0"
description = "Simple tool for scanning `Dockerfile`s and switching the image tags that appear in `FROM` to their latest version."
edition = "2021"
publish = true
license = "Apache-2.0"

[[bin]]
name = "dockerfile_version_bumper"
path = "src/main.rs"

[lib]
name = "dockerfile_version_bumper"
path = "src/lib.rs"

[features]
jemalloc = ["jemallocator"]

[dependencies]
log = "0.4.22"
env_logger = "0.9.3"
clap = { version = "3.2.25", default-features = true, features = ["std", "derive", "unicode"] }
regex = "1.11.1"
lazy_static = "1.5.0"
tokio = { version = "1.42.0", features = ["full"] }
reqwest = "0.11.27"
futures = "0.3.31"
derive-getters = "0.2.1"
derive-new = "0.5.9"
itertools = "0.10.5"
indexmap = "1.9.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.4", optional = true }

[profile.release]
lto = "thin"
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

