[package]
name = "dockerfile_version_bumper"
version = "0.1.0"
description = "Simple tool for scanning `Dockerfile`s and switching the image tags that appear in `FROM` to their latest version."
edition = "2021"
publish = true
license = "Apache-2.0"

[[bin]]
name = "dockerfile_version_bumper"
path = "src/main.rs"

[lib]
name = "dockerfile_version_bumper"
path = "src/lib.rs"

[features]
jemalloc = ["jemallocator"]

[dependencies]
log = "0.4.22"
env_logger = "0.11.6"
clap = { version = "4.5.23", default-features = true, features = ["std", "derive", "unicode"] }
regex = "1.11.1"
lazy_static = "1.5.0"
tokio = { version = "1.42.0", features = ["full"] }
reqwest = "0.12.9"
futures = "0.3.31"
derive-getters = "0.5.0"
derive-new = "0.7.0"
itertools = "0.13.0"
indexmap = "2.7.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.4", optional = true }

[profile.release]
lto = "thin"
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

